Debounce ClustersChanged event.
Makes dragging a cluster much smoother.